Colored log in served page

--- a/Remidomo/res/raw/homepage.html
+++ b/Remidomo/res/raw/homepage.html
@@ -31,7 +31,7 @@
             <td align="center"><a href="config?days=30">30 jours</a></td></tr>
       </table>
 
-      <p align="center"><font color="#666666">Derni&egrave;re mise &agrave; jour: %6$s</font></p>
+      <p align="center"><font color="#666666">Derni&egrave;re mise &agrave; jour: %6$s</font>&nbsp;<i><a href="log">(log)</a></i></p>
 
   </body>
 </html>
