Add power curve on web page

--- a/Remidomo/res/raw/homepage.html
+++ b/Remidomo/res/raw/homepage.html
@@ -23,6 +23,10 @@
             <td width="80px" align="center"><img src="img/pool" border="1" style="border-color:cyan; padding:5px" height="48px"></td>
             <td align="center" valign="center"><img src="img/poolplot"></td>
         </tr>
+        <tr>
+            <td width="80px" align="center"><img src="img/energy" border="1" style="border-color:yellow; padding:5px" height="48px"></td>
+            <td align="center" valign="center"><img src="img/powerplot"></td>
+        </tr>
       </table>
 
       <table align="center" width="75%%"><tr>
