Internet@TV: prevent images from caching (involves ServerThread) Improve style sheets

--- a/Internet@TV/app/htmls/Pool.html
+++ b/Internet@TV/app/htmls/Pool.html
@@ -1,2 +1,3 @@
 <!-- this html will be a contents of div ScenePool -->
-<div id="Graph"></div>
+<div id="GraphPool"></div>
+<div id="Title">Piscine</div>
