--- a/Internet@TV/app/htmls/Thermo.html
+++ b/Internet@TV/app/htmls/Thermo.html
@@ -1,5 +1,6 @@
 <!-- this html will be a contents of div SceneThermo -->
-<div id="Graph"></div>
+<div id="GraphThermo"></div>
 <div id="Dehors"></div>
 <div id="Jardin"></div>
 <div id="Piscine"></div>
+<div id="Title">Temp&eacute;ratures</div>
