--- a/Internet@TV/app/htmls/Energy.html
+++ b/Internet@TV/app/htmls/Energy.html
@@ -1,2 +1,3 @@
 <!-- this html will be a contents of div SceneEnergy -->
-<div id="Graph"></div>
+<div id="GraphEnergy"></div>
+<div id="Title">Consommation Electrique</div>
