--- a/Remidomo/res/raw/homepage.html
+++ b/Remidomo/res/raw/homepage.html
@@ -9,12 +9,11 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript">
-      google.load("visualization", "1", {packages:["corechart"]});
+      google.load("visualization", "1", {packages:["corechart", 'annotatedtimeline']});
       google.setOnLoadCallback(drawChart);
       function drawChart() {
         var temp_formatter = new google.visualization.NumberFormat({fractionDigits:1, suffix:' degC'});
 		var date_formatter = new google.visualization.DateFormat({pattern: 'd MMM à H:mm'});
-		var power_formatter = new google.visualization.NumberFormat({fractionDigits:1, suffix:' kW'});
 
       	var json_pool = $.ajax({url: "sensors/charts?id=temp3-temp",
                                 dataType:"json",
@@ -24,7 +23,7 @@
         date_formatter.format(data_pool, 0);
 		temp_formatter.format(data_pool, 1);
 
-        var json_all = $.ajax({url: "sensors/charts?id=temp3-temp&th2_0x9b05-temp&th1_0xe902-temp",
+        var json_all = $.ajax({url: "sensors/charts?id=temp3-temp&th2_0x9b05-temp&th1_0xe102-temp",
                                dataType:"json",
                                async: false
                               }).responseText;
@@ -41,8 +40,6 @@
                               }).responseText;
 
 		var data_power = new google.visualization.DataTable(json_power);
-		date_formatter.format(data_power, 0);
-		power_formatter.format(data_power, 1);
 
         var options_temp = {
           titlePosition: 'none',
@@ -64,20 +61,13 @@
         };
 
         var options_power = {
-          titlePosition: 'none',
-          backgroundColor: 'black',
-          legend: {position: 'none'},
-          axisTitlesPosition: 'in',
-          lineWidth: 1,
-          hAxis: {gridlines: {color: '#333333'},
-                  maxTextLines: 5,
-                  titleTextStyle: {color: '#555555' },
-                 },
-          vAxis: {title: 'kW',
-                  gridlines: {color: '#333333'},
-                  minorGridlines: {count: 2, color:'#111111'}
-                 },
-          series: [{color: 'red', visibleInLegend: false}]
+          colors: ['red'],
+          displayAnnotations: true,
+          displayExactValues: true,
+          dateFormat: 'd MMM à H:mm',
+          displayLegendDots: false,
+          displayZoomButtons: false,
+          allValuesSuffix: 'W'
         };
 
         var pool_chart = new google.visualization.LineChart(document.getElementById('pool_div'));
@@ -86,7 +76,7 @@
         var all_chart = new google.visualization.LineChart(document.getElementById('all_div'));
         all_chart.draw(data_all, options_temp);
 
-        var power_chart = new google.visualization.LineChart(document.getElementById('power_div'));
+        var power_chart = new google.visualization.AnnotatedTimeLine(document.getElementById('power_div'));
         power_chart.draw(data_power, options_power);
       }
     </script>
@@ -112,7 +102,7 @@
         </tr>
         <tr>
             <td width="80px" align="center"><img src="img/energy" border="1" style="border-color:yellow; padding:5px" height="48px"></td>
-            <td align="center" valign="center"><div id="power_div" style="width: 1000px; height: 500px;"></div></td>
+            <td align="center" valign="center"><div id="power_div" style="width: 700px; height: 400px;"></div></td>
         </tr>
       </table>
 
