Bugfix: Sync sensor names

--- a/Remidomo/Server/src/main/res/raw/homepage.html
+++ b/Remidomo/Server/src/main/res/raw/homepage.html
@@ -23,7 +23,7 @@
         date_formatter.format(data_pool, 0);
 		temp_formatter.format(data_pool, 1);
 
-        var json_all = $.ajax({url: "sensors/charts?id=temp3-temp&th2_0x9b05-temp&th1_0xe102-temp",
+        var json_all = $.ajax({url: "sensors/charts?id=temp3-temp&th2_0x1005-temp&th1_0x2d02-temp",
                                dataType:"json",
                                async: false
                               }).responseText;
